@@ -7,20 +7,20 @@ package org.whispersystems.textsecuregcm.redis;
 
 import static org.junit.jupiter.api.Assumptions.assumeFalse;
 
+import io.github.resilience4j.circuitbreaker.CallNotPermittedException;
 import io.lettuce.core.RedisClient;
 import io.lettuce.core.RedisException;
 import io.lettuce.core.RedisURI;
 import io.lettuce.core.api.StatefulRedisConnection;
 import io.lettuce.core.api.sync.RedisCommands;
-import io.lettuce.core.cluster.RedisClusterClient;
 import io.lettuce.core.cluster.SlotHash;
+import io.lettuce.core.resource.ClientResources;
 import java.io.File;
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.extension.AfterAllCallback;
 import org.junit.jupiter.api.extension.AfterEachCallback;
 import org.junit.jupiter.api.extension.BeforeAllCallback;
@@ -42,7 +42,8 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
 
   private final Duration timeout;
   private final RetryConfiguration retryConfiguration;
-  private FaultTolerantRedisCluster redisCluster;
+  private FaultTolerantRedisClusterClient redisCluster;
+  private ClientResources redisClientResources;
 
   public RedisClusterExtension(final Duration timeout, final RetryConfiguration retryConfiguration) {
     this.timeout = timeout;
@@ -50,8 +51,8 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
   }
 
 
-  public static RedisClusterExtensionBuilder builder() {
-    return new RedisClusterExtensionBuilder();
+  public static Builder builder() {
+    return new Builder();
   }
 
   @Override
@@ -64,6 +65,7 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
   @Override
   public void afterEach(final ExtensionContext context) throws Exception {
     redisCluster.shutdown();
+    redisClientResources.shutdown().get();
   }
 
   @Override
@@ -81,14 +83,15 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
 
   @Override
   public void beforeEach(final ExtensionContext context) throws Exception {
-    final List<String> urls = Arrays.stream(CLUSTER_NODES)
-        .map(node -> String.format("redis://127.0.0.1:%d", node.ports().get(0)))
-        .toList();
 
-    redisCluster = new FaultTolerantRedisCluster("test-cluster",
-        RedisClusterClient.create(urls.stream().map(RedisURI::create).collect(Collectors.toList())),
+    redisClientResources = ClientResources.builder().build();
+    final CircuitBreakerConfiguration circuitBreakerConfig = new CircuitBreakerConfiguration();
+    circuitBreakerConfig.setWaitDurationInOpenState(Duration.ofMillis(500));
+    redisCluster = new FaultTolerantRedisClusterClient("test-cluster",
+        redisClientResources.mutate(),
+        getRedisURIs(),
         timeout,
-        new CircuitBreakerConfiguration(),
+        circuitBreakerConfig,
         retryConfiguration);
 
     redisCluster.useCluster(connection -> {
@@ -107,7 +110,7 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
           }
 
           setAll = true;
-        } catch (final RedisException ignored) {
+        } catch (final RedisException | CallNotPermittedException ignored) {
           // Cluster isn't ready; wait and retry.
           try {
             Thread.sleep(500);
@@ -120,7 +123,14 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
     redisCluster.useCluster(connection -> connection.sync().flushall());
   }
 
-  public FaultTolerantRedisCluster getRedisCluster() {
+  public static List<RedisURI> getRedisURIs() {
+    return Arrays.stream(CLUSTER_NODES)
+        .map(node -> "redis://127.0.0.1:%d".formatted(node.ports().getFirst()))
+        .map(RedisURI::create)
+        .toList();
+  }
+
+  public FaultTolerantRedisClusterClient getRedisCluster() {
     return redisCluster;
   }
 
@@ -140,12 +150,12 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
   }
 
   private static void assembleCluster(final RedisServer... nodes) throws InterruptedException {
-    try (final RedisClient meetClient = RedisClient.create(RedisURI.create("127.0.0.1", nodes[0].ports().get(0)))) {
+    try (final RedisClient meetClient = RedisClient.create(RedisURI.create("127.0.0.1", nodes[0].ports().getFirst()))) {
       final StatefulRedisConnection<String, String> connection = meetClient.connect();
       final RedisCommands<String, String> commands = connection.sync();
 
       for (int i = 1; i < nodes.length; i++) {
-        commands.clusterMeet("127.0.0.1", nodes[i].ports().get(0));
+        commands.clusterMeet("127.0.0.1", nodes[i].ports().getFirst());
       }
     }
 
@@ -155,7 +165,8 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
       final int startInclusive = i * slotsPerNode;
       final int endExclusive = i == nodes.length - 1 ? SlotHash.SLOT_COUNT : (i + 1) * slotsPerNode;
 
-      try (final RedisClient assignSlotClient = RedisClient.create(RedisURI.create("127.0.0.1", nodes[i].ports().get(0)));
+      try (final RedisClient assignSlotClient = RedisClient.create(
+          RedisURI.create("127.0.0.1", nodes[i].ports().getFirst()));
           final StatefulRedisConnection<String, String> assignSlotConnection = assignSlotClient.connect()) {
         final int[] slots = new int[endExclusive - startInclusive];
 
@@ -167,11 +178,11 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
       }
     }
 
-    try (final RedisClient waitClient = RedisClient.create(RedisURI.create("127.0.0.1", nodes[0].ports().get(0)));
+    try (final RedisClient waitClient = RedisClient.create(RedisURI.create("127.0.0.1", nodes[0].ports().getFirst()));
         final StatefulRedisConnection<String, String> connection = waitClient.connect()) {
       // CLUSTER INFO gives us a big blob of key-value pairs, but the one we're interested in is `cluster_state`.
       // According to https://redis.io/commands/cluster-info, `cluster_state:ok` means that the node is ready to
-      // receive queries, all slots are assigned, and a majority of master nodes are reachable.
+      // receive queries, all slots are assigned, and a majority of leader nodes are reachable.
 
       final int sleepMillis = 500;
       int tries = 0;
@@ -181,7 +192,7 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
 
         if (tries == 20) {
           throw new RuntimeException(
-              String.format("Timeout: Redis not ready after waiting %d milliseconds", tries * sleepMillis));
+              "Timeout: Redis not ready after waiting %d milliseconds".formatted(tries * sleepMillis));
         }
       }
     }
@@ -191,7 +202,6 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
     final int maxIterations = 11_000;
     for (int i = 0; i < maxIterations; i++) {
       try (final ServerSocket socket = new ServerSocket(0)) {
-        socket.setReuseAddress(false);
         final int port = socket.getLocalPort();
         if (port < 55535) {
           return port;
@@ -215,20 +225,20 @@ public class RedisClusterExtension implements BeforeAllCallback, BeforeEachCallb
     }
   }
 
-  public static class RedisClusterExtensionBuilder {
+  public static class Builder {
 
     private Duration timeout = DEFAULT_TIMEOUT;
     private RetryConfiguration retryConfiguration = new RetryConfiguration();
 
-    private RedisClusterExtensionBuilder() {
+    private Builder() {
     }
 
-    RedisClusterExtensionBuilder timeout(Duration timeout) {
+    Builder timeout(Duration timeout) {
       this.timeout = timeout;
       return this;
     }
 
-    RedisClusterExtensionBuilder retryConfiguration(RetryConfiguration retryConfiguration) {
+    Builder retryConfiguration(RetryConfiguration retryConfiguration) {
       this.retryConfiguration = retryConfiguration;
       return this;
     }
