@@ -12,12 +12,18 @@ import com.amazonaws.services.dynamodbv2.ReleaseLockOptions;
 import com.google.i18n.phonenumbers.PhoneNumberUtil;
 import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 class AccountLockManagerTest {
 
   private AmazonDynamoDBLockClient lockClient;
+  private ExecutorService executor;
 
   private AccountLockManager accountLockManager;
 
@@ -30,13 +36,22 @@ class AccountLockManagerTest {
   @BeforeEach
   void setUp() {
     lockClient = mock(AmazonDynamoDBLockClient.class);
+    executor = Executors.newSingleThreadExecutor();
 
     accountLockManager = new AccountLockManager(lockClient);
   }
 
+  @AfterEach
+  void tearDown() throws InterruptedException {
+    executor.shutdown();
+
+    //noinspection ResultOfMethodCallIgnored
+    executor.awaitTermination(1, TimeUnit.SECONDS);
+  }
+
   @Test
   void withLock() throws InterruptedException {
-    accountLockManager.withLock(List.of(FIRST_NUMBER, SECOND_NUMBER), () -> {});
+    accountLockManager.withLock(List.of(FIRST_NUMBER, SECOND_NUMBER), () -> {}, executor);
 
     verify(lockClient, times(2)).acquireLock(any());
     verify(lockClient, times(2)).releaseLock(any(ReleaseLockOptions.class));
@@ -46,7 +61,7 @@ class AccountLockManagerTest {
   void withLockTaskThrowsException() throws InterruptedException {
     assertThrows(RuntimeException.class, () -> accountLockManager.withLock(List.of(FIRST_NUMBER, SECOND_NUMBER), () -> {
       throw new RuntimeException();
-    }));
+    }, executor));
 
     verify(lockClient, times(2)).acquireLock(any());
     verify(lockClient, times(2)).releaseLock(any(ReleaseLockOptions.class));
@@ -56,7 +71,37 @@ class AccountLockManagerTest {
   void withLockEmptyList() {
     final Runnable task = mock(Runnable.class);
 
-    assertThrows(IllegalArgumentException.class, () -> accountLockManager.withLock(Collections.emptyList(), () -> {}));
+    assertThrows(IllegalArgumentException.class, () -> accountLockManager.withLock(Collections.emptyList(), () -> {}, executor));
+    verify(task, never()).run();
+  }
+
+  @Test
+  void withLockAsync() throws InterruptedException {
+    accountLockManager.withLockAsync(List.of(FIRST_NUMBER, SECOND_NUMBER),
+        () -> CompletableFuture.completedFuture(null), executor).join();
+
+    verify(lockClient, times(2)).acquireLock(any());
+    verify(lockClient, times(2)).releaseLock(any(ReleaseLockOptions.class));
+  }
+
+  @Test
+  void withLockAsyncTaskThrowsException() throws InterruptedException {
+    assertThrows(RuntimeException.class,
+        () -> accountLockManager.withLockAsync(List.of(FIRST_NUMBER, SECOND_NUMBER),
+            () -> CompletableFuture.failedFuture(new RuntimeException()), executor).join());
+
+    verify(lockClient, times(2)).acquireLock(any());
+    verify(lockClient, times(2)).releaseLock(any(ReleaseLockOptions.class));
+  }
+
+  @Test
+  void withLockAsyncEmptyList() {
+    final Runnable task = mock(Runnable.class);
+
+    assertThrows(IllegalArgumentException.class,
+        () -> accountLockManager.withLockAsync(Collections.emptyList(),
+            () -> CompletableFuture.completedFuture(null), executor));
+
     verify(task, never()).run();
   }
 }
